Bug 4905 - glibc 2.6.1: nscd aborts at hstcache.c:389
Summary: glibc 2.6.1: nscd aborts at hstcache.c:389
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: nscd (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-08 16:06 UTC by Andreas Steinmetz
Modified: 2014-07-04 16:06 UTC (History)
1 user (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Last reconfirmed:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Steinmetz 2007-08-08 16:06:37 UTC
nscd of glibc-2.6.1 terminates about once within 24 to 48 hours. Running it with
'-d' gives:

1359: handle_request: request received (Version = 2) from PID 993
1359:   GETFDPW
1359: handle_request: request received (Version = 2) from PID 993
1359:   GETPWBYUID (65534)
1359: handle_request: request received (Version = 2) from PID 993
1359:   GETFDHST
1359: handle_request: request received (Version = 2) from PID 993
1359:   GETHOSTBYNAME (zeus)
1359: Reloading "swupmf.adobe.com" in hosts cache!
nscd: hstcache.c:389: cache_addhst: Assertion `hst->h_addr_list[1] == ((void
*)0)' failed.

Compiler is vanilla gcc-4.1.2, binutils is vanilla binutils-2.17.
Comment 1 Ulrich Drepper 2007-08-22 03:31:46 UTC
You don't nearly give enough information for me to be sure what the problem is.
 I have found a path where this could happen and this is fixed in cvs.

Try this version.  If the problem should persist specify also what NSS services
you use and what they could have found (i.e., the info returned by the services).
Comment 2 Andreas Steinmetz 2007-08-22 07:40:01 UTC
Sorry, I didn't have more information.
I'm running nscd now with the modified hstcache.c. The fix looks reasonable. If
nscd doesn't abort during the next week I'll assume the fix as working.